<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/main_menu_ac_wifi"
        android:icon="@drawable/wifidark"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_wifi"/>
    <item
        android:id="@+id/main_menu_ac_config"
        android:icon="@drawable/settings"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_config"/>
    
    <item
        android:id="@+id/main_menu_develop"
        android:icon="@android:drawable/ic_menu_compass"
        android:showAsAction="never"
        android:title="@string/menu_develop"/>
    
    <item
        android:id="@+id/main_menu_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:showAsAction="never"
        android:title="@string/menu_exit"/>

</menu>